Make sure border appears on all category list items on mobile

--- a/app/assets/stylesheets/views/homepage.scss
+++ b/app/assets/stylesheets/views/homepage.scss
@@ -64,8 +64,11 @@
         width: 45.5%;
         margin-left: 4.5%;
 
-        &:nth-child(11n) {
-          border:none;
+        @include media(desktop) {
+
+          &:nth-child(11n) {
+            border-bottom:none;
+          }
         }
 
         &:nth-child(even) {
@@ -87,10 +90,6 @@
           float: none;
           width: 100%;
           margin-left: 0;
-
-          &:nth-child(11n) {
-            border:none;
-          }
 
           &:nth-child(even) {
             float: none;
